src/components/BGCDirectory/DirectoryHome.css
.directory_container {
    display: flex;
    box-shadow: 0px 1px 5px 0px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 3px 1px -2px rgb(0 0 0 / 12%);
    margin-top: 10px;
    width: 100%;
    border-radius: 10px;
    -webkit-flex-direction: column;
    flex-direction: column;
    background-color: white;
    margin: 10px;
    padding: 15px;
}
.directory_container h4 {
    color: rgba(0,0,0,0.87);
    font-family: Roboto;
    font-size: 20px;
    font-weight: 500;
    letter-spacing: 0.15px;
    line-height: 24px;
}
.directory__header {
    display: flex;
    justify-content: space-between;
    margin: 20px 0;
}

@media (max-width: 768px) {
    .directory__header{
        flex-direction: column;
        align-items: flex-start;
    }
    .directory__header_left{
        width: 100% !important;
    }
    .directory_body{
        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) !important;
    }
}

.directory__header_left {
    width: 50%;
}
.directory__header_searchBar {
 width: 100%;
}
.directory__header_right {
    display: flex;
    flex-direction: column;
    margin-right: 20px;
    padding: 10px 0;
    align-items: flex-start;

}
.directory__header_right span {
    color: rgba(0,0,0,0.74); font-family: Roboto; font-size: 16px; letter-spacing: 0.5px; line-height: 24px; text-align: right;
}
.directory__header_MyNetworkLabel {
    color: #6200EE !important;
}
.directory_body {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 10px;
}
.member_block {
    text-align: center;
    overflow: hidden;
    margin-bottom: 8px;
    background-color: #ffffff;
    border-radius: 5px;
    transition: box-shadow 83ms;
    display: flex;
    flex-direction: column;
    align-items: center;
    border: none;
    box-shadow: 0 0 0 1px rgb(0 0 0 / 15%), 0 0 0 rgb(0 0 0 / 20%);
}
.member_block_name {
    color: rgba(0,0,0,0.87); font-family: Roboto; font-size: 20px; font-weight: 500; letter-spacing: 0.15px; line-height: 24px; text-align: center; 
}
.member_block_role {
    color: rgba(0,0,0,0.87); font-family: Roboto; font-size: 16px; letter-spacing: 0.15px; line-height: 24px; text-align: center;
}
.member__image {
    height: 100px !important;
    width: 100px !important;
    margin: 20px 0 10px 0;
}
.member_add_action {
    display: flex;
    align-items: center;
    margin: 20px 0 20px 0;
    color: #6200EE;
    cursor: pointer;
}
.member_add_action_label {
     font-family: Roboto; font-size: 14px; font-weight: 500; letter-spacing: 1.25px; line-height: 16px;
     margin-left: 5px;
}

